--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0",
+    "styled-components": "^5.2.1",
+    "styled-system": "^5.1.5",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
@@ -57,6 +59,8 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/styled-components": "^5.1.4",
+    "@types/styled-system": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
     "@typescript-eslint/parser": "^4.7.0",
     "eslint": "^7.13.0",
