test: added a test to create the benchmark

--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/faker": "^5.1.4",
+    "@types/lodash": "^4.14.165",
     "@types/styled-components": "^5.1.4",
     "@types/styled-system": "^5.1.10",
     "@typescript-eslint/eslint-plugin": "^4.7.0",
@@ -68,7 +70,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "faker": "^5.1.0",
     "husky": "^4.3.0",
+    "lodash": "^4.17.20",
     "prettier": "^2.1.2"
   }
 }
