--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   "scripts": {
     "prebuild": "rm -rf build && npm run check-commit",
     "build": "rollup -c",
-    "start": "react-scripts start",
+    "start": "npm run storybook",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "prettier": "prettier --write \"{**/*.js,**/*.ts,**/*.tsx}\"",
@@ -51,7 +51,10 @@
     "storybook": "start-storybook -p 6006 --no-dll",
     "build-storybook": "build-storybook --no-dll"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@storybook/node-logger": "^6.0.28",
+    "@storybook/preset-create-react-app": "^3.1.5"
+  },
   "peerDependencies": {
     "react": ">=17.0.1",
     "react-dom": ">=17.0.1",
@@ -65,6 +68,7 @@
     "@rollup/plugin-commonjs": "^16.0.0",
     "@rollup/plugin-node-resolve": "^10.0.0",
     "@storybook/addon-actions": "^6.0.28",
+    "@storybook/addon-docs": "^6.0.28",
     "@storybook/addon-essentials": "^6.0.28",
     "@storybook/addon-links": "^6.0.28",
     "@storybook/react": "^6.0.28",
