--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/node": "^14.14.22",
+    "@types/react": "^17.0.0",
     "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react-dom": "17.0.1",
+    "typescript": "^4.1.3"
   }
 }
