--- a/package.json
+++ b/package.json
@@ -14,7 +14,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "prettier": "prettier --write \"{**/*.js,**/*.ts,**/*.tsx,**/*.json}\"",
+    "lint": "eslint . --ext js --ext jsx --ext ts --ext tsx",
+    "lint:fix": "npm run lint -- --fix",
+    "type-check": "tsc --noEmit",
+    "check-commit": "npm run type-check && npm run prettier && npm run lint:fix"
   },
   "dependencies": {
     "@types/node": "^14.14.22",
@@ -23,5 +28,20 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.14.1",
+    "@typescript-eslint/parser": "^4.14.1",
+    "eslint": "^7.18.0",
+    "eslint-config-prettier": "^7.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsdoc": "^31.4.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.22.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "husky": "^4.3.8",
+    "prettier": "^2.2.1"
   }
 }
