--- a/package.json
+++ b/package.json
@@ -15,28 +15,37 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "prettier": "prettier --write \"{**/*.js,**/*.ts,**/*.tsx,**/*.json}\"",
+    "prettier": "prettier --write \"{**/*.js,**/*.ts,**/*.tsx,**/*.json,**/*.md,**/*.mdx}\"",
     "lint": "eslint . --ext js --ext jsx --ext ts --ext tsx",
     "lint:fix": "npm run lint -- --fix",
     "type-check": "tsc --noEmit",
-    "check-commit": "npm run type-check && npm run prettier && npm run lint:fix"
+    "check-commit": "npm run type-check && npm run prettier && npm run lint:fix",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
-    "autoprefixer": "^10.2.3",
+    "autoprefixer": "^9.8.6",
     "next": "10.0.5",
-    "postcss": "^8.2.4",
+    "postcss": "^7.0.35",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.12.10",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@storybook/addon-actions": "^6.1.15",
+    "@storybook/addon-essentials": "^6.1.15",
+    "@storybook/addon-links": "^6.1.15",
+    "@storybook/react": "^6.1.15",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "babel-loader": "^8.2.2",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
