--- a/package.json
+++ b/package.json
@@ -12,14 +12,17 @@
     "url": "https://github.com/perimetre/ui/issues"
   },
   "scripts": {
+    "prestart": "npm run check-commit",
+    "start": "npm run dev",
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "prettier": "prettier --write \"{**/*.js,**/*.ts,**/*.tsx,**/*.json,**/*.md,**/*.mdx}\"",
+    "serve": "next start",
+    "prettier": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|md|mdx)\"",
     "lint": "eslint . --ext js --ext jsx --ext ts --ext tsx",
     "lint:fix": "npm run lint -- --fix",
+    "lint:css": "stylelint \"./src/**/*.+(js|jsx|ts|tsx|css|scss)\"",
     "type-check": "tsc --noEmit",
-    "check-commit": "npm run type-check && npm run prettier && npm run lint:fix",
+    "check-commit": "npm run type-check && npm run prettier && npm run lint:css && npm run lint:fix",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
@@ -27,11 +30,14 @@
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
+    "@types/styled-components": "^5.1.7",
     "autoprefixer": "^9.8.6",
+    "babel-plugin-styled-components": "^1.12.0",
     "next": "10.0.5",
     "postcss": "^7.0.35",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "styled-components": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.1.3"
   },
@@ -54,6 +60,9 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "stylelint": "^13.9.0",
+    "stylelint-config-recommended": "^3.0.0",
+    "stylelint-config-styled-components": "^0.1.1"
   }
 }
