feat: tailwind proof of concept

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "css.customData": [".vscode/css_custom_data.json"]
+  "css.customData": [".vscode/css_custom_data.json"],
+  "css.validate": false,
+  "less.validate": false,
+  "scss.validate": false
 }
