--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "babel-plugin-styled-components": "^1.12.0",
     "next": "10.0.5",
     "postcss": "^7.0.35",
+    "postcss-import": "^14.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "styled-components": "^5.2.1",
