--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "bugs": {
     "url": "https://github.com/perimetre/ui/issues"
   },
+  "main": "build/index.js",
+  "module": "build/index.es.js",
+  "files": [
+    "build"
+  ],
   "scripts": {
     "prestart": "npm run check-commit",
     "start": "npm run dev",
@@ -24,9 +29,18 @@
     "type-check": "tsc --noEmit",
     "check-commit": "npm run type-check && npm run prettier && npm run lint:css && npm run lint:fix",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "rollup:build": "rollup -c",
+    "rollup:watch": "rollup -c -w"
+  },
+  "peerDependencies": {
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
+    "next": "10.0.5"
   },
   "dependencies": {
+    "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-node-resolve": "^11.1.1",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.0",
@@ -35,9 +49,16 @@
     "babel-plugin-styled-components": "^1.12.0",
     "next": "10.0.5",
     "postcss": "^7.0.35",
-    "postcss-import": "^14.0.0",
+    "postcss-combine-duplicated-selectors": "^9.4.0",
+    "postcss-combine-media-query": "^1.0.1",
+    "postcss-import": "^12.0.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "rollup": "^2.38.1",
+    "rollup-plugin-copy": "^3.3.0",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-postcss": "^4.0.0",
+    "rollup-plugin-typescript2": "^0.29.0",
     "styled-components": "^5.2.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.1.3"
