--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "postcss-combine-duplicated-selectors": "^9.4.0",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rollup": "^2.38.1",
