chore: updated readme

--- a/package.json
+++ b/package.json
@@ -18,10 +18,10 @@
   ],
   "scripts": {
     "prestart": "npm run check-commit",
-    "start": "npm run dev",
-    "dev": "next dev",
-    "build": "next build",
-    "serve": "next start",
+    "start": "npm run storybook",
+    "next:dev": "next dev",
+    "next:build": "next build",
+    "next:start": "next start",
     "prettier": "prettier --write \"**/*.+(js|jsx|ts|tsx|json|md|mdx)\"",
     "lint": "eslint . --ext js --ext jsx --ext ts --ext tsx",
     "lint:fix": "npm run lint -- --fix",
