--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,7 @@
 tsconfig.json
 tsconfig.build.json
 postcss.config.js
+tailwind.config.js
 rollup.config.js
 commitlint.config.js
 stylelint.config.js
@@ -15,7 +16,8 @@ public
 node_modules
 .vscode
 .babelrc
-src
 public
 .storybook
 .next
+.git
+next-env.d.ts
