feat: added button component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "css.customData": [".vscode/css_custom_data.json"],
   "css.validate": false,
   "less.validate": false,
-  "scss.validate": false
+  "scss.validate": false,
+  "editor.quickSuggestions": {
+    "strings": true
+  }
 }
