--- a/package.json
+++ b/package.json
@@ -44,17 +44,22 @@
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
+    "@types/preval.macro": "^3.0.0",
     "@types/react": "^17.0.0",
     "@types/styled-components": "^5.1.7",
     "autoprefixer": "^9.8.6",
+    "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
+    "lodash": "^4.17.20",
     "next": "10.0.5",
     "postcss": "^7.0.35",
     "postcss-combine-duplicated-selectors": "^9.4.0",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-import": "^12.0.1",
     "postcss-nested": "^4.2.3",
+    "preval.macro": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rollup": "^2.38.1",
