--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   ],
   "scripts": {
     "prestart": "npm run check-commit",
-    "start": "npm run storybook",
+    "start": "npm run dev",
+    "dev": "npm run storybook",
     "next:dev": "next dev",
     "next:build": "next build",
     "next:start": "next start",
@@ -29,7 +30,7 @@
     "type-check": "tsc --noEmit",
     "check-commit": "npm run type-check && npm run prettier && npm run lint:css && npm run lint:fix && npm run rollup:build",
     "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook",
+    "build-storybook": "build-storybook -s ./public",
     "rollup:build": "rollup -c",
     "rollup:watch": "rollup -c -w",
     "prepare": "npm run rollup:build"
@@ -49,6 +50,7 @@
     "@types/preval.macro": "^3.0.0",
     "@types/react": "^17.0.0",
     "@types/styled-components": "^5.1.7",
+    "@types/svgo": "^1.3.3",
     "autoprefixer": "^9.8.6",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
@@ -68,6 +70,7 @@
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-typescript2": "^0.29.0",
     "styled-components": "^5.2.1",
+    "svgo": "^1.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.1.3"
   },
@@ -75,10 +78,10 @@
     "@babel/core": "^7.12.10",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@storybook/addon-actions": "^6.1.15",
-    "@storybook/addon-essentials": "^6.1.15",
-    "@storybook/addon-links": "^6.1.15",
-    "@storybook/react": "^6.1.15",
+    "@storybook/addon-actions": "^6.1.17",
+    "@storybook/addon-essentials": "^6.1.17",
+    "@storybook/addon-links": "^6.1.17",
+    "@storybook/react": "^6.1.17",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "babel-loader": "^8.2.2",
