--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
     "lodash": "^4.17.20",
+    "nanoid": "^3.1.20",
     "next": "10.0.5",
     "postcss": "^7.0.35",
     "postcss-combine-duplicated-selectors": "^9.4.0",
