--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@types/hammerjs": "^2.0.38",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/preval.macro": "^3.0.0",
@@ -54,6 +55,8 @@
     "autoprefixer": "^9.8.6",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
+    "framer-motion": "^3.3.0",
+    "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
     "nanoid": "^3.1.20",
     "next": "10.0.5",
