--- a/package.json
+++ b/package.json
@@ -36,11 +36,12 @@
     "prepare": "npm run rollup:build"
   },
   "peerDependencies": {
+    "next": "10.0.5",
     "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "next": "10.0.5"
+    "react-dom": "17.0.1"
   },
   "dependencies": {
+    "@babel/core": "^7.12.13",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@tailwindcss/line-clamp": "^0.2.0",
@@ -53,6 +54,7 @@
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^1.3.3",
     "autoprefixer": "^9.8.6",
+    "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
     "framer-motion": "^3.3.0",
@@ -79,7 +81,6 @@
     "typescript": "^4.1.3"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.10",
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
     "@storybook/addon-actions": "^6.1.17",
@@ -88,7 +89,6 @@
     "@storybook/react": "^6.1.17",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "babel-loader": "^8.2.2",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
