--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@types/node": "^14.14.22",
     "@types/preval.macro": "^3.0.0",
     "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^1.3.3",
     "autoprefixer": "^9.8.6",
