--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@tippyjs/react": "^4.2.0",
     "@types/hammerjs": "^2.0.38",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
