--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "files": [
     "dist"
   ],
+  "engines": {
+    "node": "14.15.5",
+    "npm": "^6.14"
+  },
   "scripts": {
     "prestart": "npm run check-commit",
     "start": "npm run dev",
@@ -75,6 +79,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-typescript2": "^0.29.0",
+    "storybook": "^6.1.17",
     "styled-components": "^5.2.1",
     "svgo": "^1.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
@@ -83,12 +88,14 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@storybook/addon-a11y": "^6.1.18",
     "@storybook/addon-actions": "^6.1.17",
     "@storybook/addon-essentials": "^6.1.17",
     "@storybook/addon-links": "^6.1.17",
     "@storybook/react": "^6.1.17",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "@whitespace/storybook-addon-html": "^4.2.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -99,6 +106,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
+    "storybook-addon-jsx": "^7.3.6",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1"
