--- a/package.json
+++ b/package.json
@@ -44,11 +44,21 @@
   },
   "dependencies": {
     "@babel/core": "^7.12.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-brands-svg-icons": "^5.15.2",
+    "@fortawesome/free-regular-svg-icons": "^5.15.2",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "^2.0.2",
+    "@tailwindcss/typography": "^0.4.0",
     "@tippyjs/react": "^4.2.0",
+    "@types/classnames": "^2.2.11",
+    "@types/dompurify": "^2.2.1",
+    "@types/draft-js": "^0.10.44",
+    "@types/draftjs-to-html": "^0.8.0",
     "@types/hammerjs": "^2.0.38",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
@@ -61,6 +71,11 @@
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
+    "classnames": "^2.2.6",
+    "dompurify": "^2.2.6",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
+    "draftjs-utils": "^0.10.2",
     "framer-motion": "^3.3.0",
     "hammerjs": "^2.0.8",
     "lodash": "^4.17.20",
