--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/draft-js": "^0.10.44",
     "@types/draftjs-to-html": "^0.8.0",
     "@types/hammerjs": "^2.0.38",
+    "@types/html-to-draftjs": "^1.4.0",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/preval.macro": "^3.0.0",
@@ -78,6 +79,7 @@
     "draftjs-utils": "^0.10.2",
     "framer-motion": "^3.3.0",
     "hammerjs": "^2.0.8",
+    "html-to-draftjs": "^1.5.0",
     "lodash": "^4.17.20",
     "nanoid": "^3.1.20",
     "next": "10.0.5",
