--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@types/react-dom": "^17.0.1",
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^1.3.3",
+    "@types/yup": "^0.29.11",
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
@@ -77,6 +78,7 @@
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "draftjs-utils": "^0.10.2",
+    "formik": "^2.2.6",
     "framer-motion": "^3.3.0",
     "hammerjs": "^2.0.8",
     "html-to-draftjs": "^1.5.0",
@@ -100,7 +102,8 @@
     "styled-components": "^5.2.1",
     "svgo": "^1.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
