--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@perimetre/ui",
   "description": "A component library made by @perimetre",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/perimetre/ui.git"
@@ -13,6 +13,7 @@
   },
   "main": "dist/cjs/index",
   "module": "dist/esm/index",
+  "types": "dist/index.d.ts",
   "files": [
     "dist",
     "src"
