feat: added HTMLParsedContent

--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.2",
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@rollup/plugin-commonjs": "^17.1.0",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
     "@tailwindcss/line-clamp": "^0.2.0",
     "@tailwindcss/postcss7-compat": "^2.0.2",
     "@tailwindcss/typography": "^0.4.0",
     "@tippyjs/react": "^4.2.0",
     "@types/classnames": "^2.2.11",
-    "@types/dompurify": "^2.2.1",
     "@types/draft-js": "^0.10.44",
     "@types/draftjs-to-html": "^0.8.0",
     "@types/hammerjs": "^2.0.38",
@@ -78,13 +78,13 @@
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
     "classnames": "^2.2.6",
-    "dompurify": "^2.2.6",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "draftjs-utils": "^0.10.2",
     "formik": "^2.2.6",
     "framer-motion": "^3.3.0",
     "hammerjs": "^2.0.8",
+    "html-react-parser": "^1.2.4",
     "html-to-draftjs": "^1.5.0",
     "lodash": "^4.17.20",
     "nanoid": "^3.1.20",
@@ -102,21 +102,22 @@
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-postcss": "^3.1.8",
     "rollup-plugin-typescript2": "^0.29.0",
-    "storybook": "^6.1.17",
+    "storybook": "^6.1.20",
     "styled-components": "^5.2.1",
     "svgo": "^1.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.1.3",
+    "xss": "^1.0.8",
     "yup": "^0.32.9"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@storybook/addon-a11y": "^6.1.18",
-    "@storybook/addon-actions": "^6.1.17",
-    "@storybook/addon-essentials": "^6.1.17",
-    "@storybook/addon-links": "^6.1.17",
-    "@storybook/react": "^6.1.17",
+    "@storybook/addon-a11y": "^6.1.20",
+    "@storybook/addon-actions": "^6.1.20",
+    "@storybook/addon-essentials": "^6.1.20",
+    "@storybook/addon-links": "^6.1.20",
+    "@storybook/react": "^6.1.20",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@whitespace/storybook-addon-html": "^4.2.0",
