--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "lint:css": "stylelint \"./src/**/*.+(js|jsx|ts|tsx|css|scss)\"",
     "type-check": "tsc --noEmit",
     "check-commit": "npm run type-check && npm run prettier && npm run lint:css && npm run lint:fix && npm run rollup:build",
-    "storybook": "start-storybook -s ./public -p 6006",
-    "build-storybook": "build-storybook -s ./public",
+    "storybook": "start-storybook -s public -p 6006",
+    "build-storybook": "build-storybook -s public",
     "rollup:build": "rollup -c",
     "rollup:watch": "rollup -c -w",
     "prepare": "npm run rollup:build"
@@ -56,8 +56,8 @@
     "@rollup/plugin-commonjs": "^17.1.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.1.1",
+    "@storybook/addon-postcss": "^2.0.0",
     "@tailwindcss/line-clamp": "^0.2.0",
-    "@tailwindcss/postcss7-compat": "^2.0.2",
     "@tailwindcss/typography": "^0.4.0",
     "@tippyjs/react": "^4.2.0",
     "@types/classnames": "^2.2.11",
@@ -73,7 +73,7 @@
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^1.3.3",
     "@types/yup": "^0.29.11",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.2.4",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
@@ -89,23 +89,24 @@
     "lodash": "^4.17.20",
     "nanoid": "^3.1.20",
     "next": "10.0.5",
-    "postcss": "^7.0.35",
-    "postcss-combine-duplicated-selectors": "^9.4.0",
+    "postcss": "^8.2.6",
+    "postcss-combine-duplicated-selectors": "^10.0.2",
     "postcss-combine-media-query": "^1.0.1",
-    "postcss-import": "^12.0.1",
-    "postcss-nested": "^4.2.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-import": "^14.0.0",
+    "postcss-nested": "^5.0.4",
     "preval.macro": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "rollup": "^2.38.1",
     "rollup-plugin-copy": "^3.3.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-postcss": "^3.1.8",
+    "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-typescript2": "^0.29.0",
-    "storybook": "^6.1.20",
+    "storybook": "^6.2.0-beta.6",
     "styled-components": "^5.2.1",
     "svgo": "^1.3.2",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
+    "tailwindcss": "^2.0.3",
     "typescript": "^4.1.3",
     "xss": "^1.0.8",
     "yup": "^0.32.9"
@@ -113,11 +114,11 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@storybook/addon-a11y": "^6.1.20",
-    "@storybook/addon-actions": "^6.1.20",
-    "@storybook/addon-essentials": "^6.1.20",
-    "@storybook/addon-links": "^6.1.20",
-    "@storybook/react": "^6.1.20",
+    "@storybook/addon-a11y": "^6.2.0-beta.6",
+    "@storybook/addon-actions": "^6.2.0-beta.6",
+    "@storybook/addon-essentials": "^6.2.0-beta.6",
+    "@storybook/addon-links": "^6.2.0-beta.6",
+    "@storybook/react": "^6.2.0-beta.6",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "@whitespace/storybook-addon-html": "^4.2.0",
@@ -131,7 +132,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
-    "storybook-addon-jsx": "^7.3.6",
+    "storybook-addon-jsx": "^7.3.7-canary.137.616.0",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1"
