--- a/package.json
+++ b/package.json
@@ -107,6 +107,7 @@
     "styled-components": "^5.2.1",
     "svgo": "^1.3.2",
     "tailwindcss": "^2.0.3",
+    "tslib": "^2.1.0",
     "typescript": "^4.1.3",
     "xss": "^1.0.8",
     "yup": "^0.32.9"
