--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "main": "dist/cjs/index",
   "module": "dist/esm/index",
-  "types": "dist/index.d.ts",
+  "types": "dist/src/index.d.ts",
   "files": [
     "dist",
     "src"
@@ -108,7 +108,7 @@
     "svgo": "^1.3.2",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "tslib": "^2.1.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.2.2",
     "xss": "^1.0.8",
     "yup": "^0.32.9"
   },
