--- a/package.json
+++ b/package.json
@@ -114,20 +114,21 @@
     "tslib": "^2.1.0",
     "typescript": "^4.2.2",
     "xss": "^1.0.8",
-    "yup": "^0.32.9"
-  },
-  "devDependencies": {
-    "http-server": "^0.12.3",
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
+    "yup": "^0.32.9",
     "@storybook/addon-a11y": "^6.1.20",
     "@storybook/addon-actions": "^6.1.20",
     "@storybook/addon-essentials": "^6.1.20",
     "@storybook/addon-links": "^6.1.20",
     "@storybook/react": "^6.1.20",
+    "@whitespace/storybook-addon-html": "^4.2.0",
+    "storybook-addon-jsx": "^7.3.6"
+  },
+  "devDependencies": {
+    "http-server": "^0.12.3",
+    "@commitlint/cli": "^11.0.0",
+    "@commitlint/config-conventional": "^11.0.0",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
-    "@whitespace/storybook-addon-html": "^4.2.0",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -138,7 +139,6 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "husky": "^4.3.8",
     "prettier": "^2.2.1",
-    "storybook-addon-jsx": "^7.3.6",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1"
