fix: for postcss upgraded plugins (#3k92z2)

--- a/package.json
+++ b/package.json
@@ -79,7 +79,6 @@
     "@types/svgo": "^1.3.3",
     "@types/yup": "^0.29.11",
     "@whitespace/storybook-addon-html": "^4.2.0",
-    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
@@ -100,7 +99,8 @@
     "postcss-combine-media-query": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-import": "^14.0.0",
-    "postcss-nested": "^5.0.5",
+    "postcss-nested": "5.0.1",
+    "postcss-preset-env": "^6.7.0",
     "preval.macro": "^5.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
