--- a/package.json
+++ b/package.json
@@ -45,8 +45,8 @@
   },
   "peerDependencies": {
     "next": "10.0.5",
-    "react": "17.0.1",
-    "react-dom": "17.0.1"
+    "react": "17.x",
+    "react-dom": "17.x"
   },
   "dependencies": {
     "@babel/core": "^7.12.13",
