--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "lodash": "^4.17.20",
     "nanoid": "^3.1.20",
     "next": "10.0.5",
-    "postcss": "^8.3.5",
+    "postcss": "^8.2.8",
     "postcss-combine-duplicated-selectors": "^10.0.2",
     "postcss-combine-media-query": "^1.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
@@ -111,7 +111,7 @@
     "storybook": "^6.2.0-beta.10",
     "styled-components": "^5.2.1",
     "svgo": "^1.3.2",
-    "tailwindcss": "^2.2.4",
+    "tailwindcss": "^2.0.3",
     "tslib": "^2.1.0",
     "typescript": "^4.2.2",
     "yup": "^0.32.9"
@@ -121,9 +121,9 @@
     "@commitlint/config-conventional": "^11.0.0",
     "@storybook/addon-a11y": "^6.2.0-beta.10",
     "@storybook/addon-actions": "^6.2.0-beta.10",
-    "@storybook/addon-essentials": "^6.3.2",
+    "@storybook/addon-essentials": "^6.2.0-beta.10",
     "@storybook/addon-links": "^6.2.0-beta.10",
-    "@storybook/react": "^6.3.2",
+    "@storybook/react": "^6.2.0-beta.10",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
