--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@perimetre/ui",
   "description": "A component library made by @perimetre",
-  "version": "7.9.3",
+  "version": "8.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/perimetre/ui.git"
@@ -19,8 +19,8 @@
     "src"
   ],
   "engines": {
-    "node": "14.17.0",
-    "npm": "^6.14"
+    "node": "^18",
+    "npm": "^8"
   },
   "scripts": {
     "prestart": "npm run check-commit",
