--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "hammerjs": "^2.0.8",
     "html-react-parser": "^1.2.4",
     "html-to-draftjs": "^1.5.0",
+    "immutable": "^4.1.0",
     "lodash": "^4.17.20",
     "nanoid": "^3.3.1",
     "postcss": "^8.4.8",
