--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@perimetre/ui",
   "description": "A component library made by @perimetre",
-  "version": "8.0.1",
+  "version": "9.0.0",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/perimetre/ui.git"
@@ -44,9 +44,11 @@
     "prepare": "npm run rollup:build"
   },
   "peerDependencies": {
+    "@types/react": "18.x",
+    "@types/react-dom": "18.x",
     "isomorphic-dompurify": "0.x",
-    "react": "17.x",
-    "react-dom": "17.x"
+    "react": "18.x",
+    "react-dom": "18.x"
   },
   "dependencies": {
     "@babel/core": "^7.12.13",
@@ -113,6 +115,8 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@storybook/addon-a11y": "^6.5.12",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
@@ -141,8 +145,8 @@
     "isomorphic-dompurify": "^0.13.0",
     "next": "^12.1.0",
     "prettier": "^2.2.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "storybook": "^6.5.12",
     "storybook-addon-jsx": "^7.3.14",
     "stylelint": "^13.9.0",
