--- a/package.json
+++ b/package.json
@@ -46,10 +46,10 @@
   "peerDependencies": {
     "@types/react": "18.x",
     "@types/react-dom": "18.x",
+    "formik": "^2.2.9",
     "isomorphic-dompurify": "0.x",
     "react": "18.x",
-    "react-dom": "18.x",
-    "formik": "^2.2.9"
+    "react-dom": "18.x"
   },
   "dependencies": {
     "@babel/core": "^7.12.13",
@@ -73,8 +73,8 @@
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.22",
     "@types/preval.macro": "^3.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.1",
+    "@types/react": "18.x",
+    "@types/react-dom": "18.x",
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^2.6.0",
     "@types/yup": "^0.29.11",
@@ -100,6 +100,8 @@
     "postcss-import": "^14.0.2",
     "postcss-preset-env": "^7.4.2",
     "preval.macro": "^5.0.0",
+    "react-aria": "^3.21.0",
+    "react-stately": "^3.19.0",
     "rollup": "^3.2.3",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-peer-deps-external": "^2.2.4",
@@ -115,8 +117,6 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@types/react": "^18.0.21",
-    "@types/react-dom": "^18.0.6",
     "@storybook/addon-a11y": "^6.5.12",
     "@storybook/addon-actions": "^6.5.12",
     "@storybook/addon-essentials": "^6.5.12",
@@ -128,6 +128,8 @@
     "@storybook/react": "^6.5.12",
     "@storybook/storybook-deployer": "^2.8.12",
     "@storybook/theming": "^6.5.12",
+    "@types/react": "^18.0.21",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "eslint": "^7.18.0",
@@ -139,6 +141,7 @@
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-storybook": "^0.6.6",
+    "formik": "^2.2.9",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^0.12.3",
     "husky": "^4.3.8",
@@ -152,8 +155,7 @@
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "webpack": "^5.74.0",
-    "formik": "^2.2.9"
+    "webpack": "^5.74.0"
   },
   "resolutions": {
     "@storybook/react/webpack": "^5"
