feat: ability to have different date formats in date picker input

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,4 @@
+@perimetre:registry=https://npm.pkg.github.com
+engine-strict=true
 # Added because storybook was requiring react 17 and not 18. But the new version that supports 18 isn't out yet. That's not a problem since storybook isn't an important package for this project
 legacy-peer-deps=true
