feat: updated storybook and its dependencies (#86791wyem)

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "lint:css": "stylelint \"./src/**/*.+(js|jsx|ts|tsx|css|scss)\"",
     "type-check": "tsc --noEmit",
     "check-commit": "npm run type-check && npm run prettier && npm run lint:css && npm run lint:fix && npm run rollup:build",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "serve-storybook": "npm run build-storybook && http-server ./storybook-static -c-1",
     "deploy-storybook": "storybook-to-ghpages",
     "rollup:build": "rollup -c",
@@ -62,7 +62,6 @@
     "@rollup/plugin-commonjs": "^23.0.0",
     "@rollup/plugin-json": "^5.0.0",
     "@rollup/plugin-node-resolve": "^15.0.0",
-    "@storybook/builder-vite": "^0.2.4",
     "@tailwindcss/line-clamp": "^0.3.1",
     "@tailwindcss/typography": "^0.5.2",
     "@tippyjs/react": "^4.2.0",
@@ -79,7 +78,6 @@
     "@types/styled-components": "^5.1.7",
     "@types/svgo": "^2.6.0",
     "@types/yup": "^0.29.11",
-    "@whitespace/storybook-addon-html": "^5.0.0",
     "babel-loader": "^8.2.2",
     "babel-plugin-macros": "^3.0.1",
     "babel-plugin-styled-components": "^1.12.0",
@@ -118,21 +116,22 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@commitlint/config-conventional": "^11.0.0",
-    "@storybook/addon-a11y": "^6.5.12",
-    "@storybook/addon-actions": "^6.5.12",
-    "@storybook/addon-essentials": "^6.5.12",
-    "@storybook/addon-links": "^6.5.12",
-    "@storybook/addon-postcss": "^2.0.0",
-    "@storybook/addons": "^6.5.12",
-    "@storybook/builder-webpack5": "^6.5.12",
-    "@storybook/manager-webpack5": "^6.5.12",
-    "@storybook/react": "^6.5.12",
-    "@storybook/storybook-deployer": "^2.8.12",
-    "@storybook/theming": "^6.5.12",
+    "@storybook/addon-a11y": "^7.4.5",
+    "@storybook/addon-actions": "^7.4.5",
+    "@storybook/addon-essentials": "^7.4.5",
+    "@storybook/addon-links": "^7.4.5",
+    "@storybook/addon-styling-webpack": "^0.0.4",
+    "@storybook/addons": "^7.4.5",
+    "@storybook/nextjs": "^7.4.5",
+    "@storybook/react": "^7.4.5",
+    "@storybook/storybook-deployer": "^2.8.16",
+    "@storybook/theming": "^7.4.5",
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
+    "@whitespace/storybook-addon-html": "^5.1.6",
+    "css-loader": "^6.8.1",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-import": "^2.22.1",
@@ -141,18 +140,21 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.22.0",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "eslint-plugin-storybook": "^0.6.6",
+    "eslint-plugin-storybook": "^0.6.14",
     "formik": "^2.2.9",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^0.12.3",
     "husky": "^4.3.8",
     "isomorphic-dompurify": "^0.13.0",
     "next": "^12.1.0",
-    "prettier": "^2.2.1",
+    "postcss-loader": "^7.3.3",
+    "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^6.5.12",
+    "react-syntax-highlighter": "^15.5.0",
+    "storybook": "^7.4.5",
     "storybook-addon-jsx": "^7.3.14",
+    "style-loader": "^3.3.3",
     "stylelint": "^13.9.0",
     "stylelint-config-recommended": "^3.0.0",
     "stylelint-config-styled-components": "^0.1.1",
